--- a/leave_one_out.ipynb
+++ b/leave_one_out.ipynb
@@ -118,7 +118,7 @@
    "source": [
     "### Train model\n",
     "We specify a neural tangent kernel **K** of depth 5 and then fit the model to the training data, according to the kernel equation, i.e. we calculate the pseudo-inverse of the training Gram matrix and project it down with the training labels. Using the pseudo-inverse corresponds to the minimum-norm interpolator (i.e. zero L2 regularization) which is the primary focus of this notebook. Check out our paper for more details concerning the case of L2 regularization. We can summarize the predictive function with the following formula:\n",
-    "<img src=\"markdown_pics/kernel_fit.png\" width=800/>"
+    "<img src=\"markdown_pics/kernel_fit.png\" width=\"800\"/>"
    ]
   },
   {
@@ -140,7 +140,7 @@
    "source": [
     "### Predict on training and test set\n",
     "Next, we form predictions with the learnt function, both on training and test examples. Then we calculate the training and test statistics, i.e. both mean-squared loss and accuracy. The test loss and accuracy serve as a proxy for the true generalization loss and accuracy, defined as \n",
-    "<img src=\"markdown_pics/generalization.png\" width=800 />\n",
+    "<img src=\"markdown_pics/generalization.png\" width=\"800\" />\n",
     "which is usually intractable due to the lack of knowledge of the data distribution. We will demonstrate that the leave-one-out error is another way to obtain an accurate estimate that does **not** need access to a held-out testset."
    ]
   },
@@ -169,7 +169,7 @@
    "source": [
     "### Leave-One-Out Loss and Accuracy\n",
     "We can now also calculate the leave-one-out error and accuracy efficiently, due to the short-cut formula shown in Theorem 3.2, stating that the leave-one-out loss and accuracy can be calculated as \n",
-    "<img src=\"markdown_pics/leave_one_out.png\" width=800 />"
+    "<img src=\"markdown_pics/leave_one_out.png\" width=\"800\" />"
    ]
   },
   {
@@ -178,7 +178,7 @@
    "metadata": {},
    "source": [
     "This expression concerns kernel ridge regression, where we add a L2 regularization term. Recent studies however indicate that explicit regularization does not seem to be essential to the success of deep learning. As a result we also derived an expression in the case of zero regularization (i.e. for the minimum norm interpolator), which we will use in our calculations. We display the mathematical expression that the residuals take in this regime in the following:\n",
-    "<img src=\"markdown_pics/loo_unregularized.png\" width=500/>\n",
+    "<img src=\"markdown_pics/loo_unregularized.png\" width=\"500\"/>\n",
     "We see that the formula depends on the rank of the kernel matrix, which serves as a measure of complexity. Full rank (i.e. r=n) implies that the kernel is invertible, leading to zero training error. We will discuss this in more detail in the next section. Neural Tangent kernels tend to have full rank."
    ]
   },
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c44a2929",
+   "id": "85fcca11",
    "metadata": {},
    "source": [
     "We see that the leave-one-out statistics match the test statistics almost exactly across different sample sizes. "
@@ -405,9 +405,9 @@
    "metadata": {},
    "source": [
     "The random features kernel is defined through the feature map \n",
-    "<img src=\"markdown_pics/randomfeatures.png\" width=500/>\n",
+    "<img src=\"markdown_pics/randomfeatures.png\" width=\"500\"/>\n",
     "where the width 'm' increases the dimensionality of the feature map. Notice that the parameters **V** remain random. Increasing the complexity reduces the training loss as we empirically observe that for most datasets it holds that \n",
-    "<img src=\"markdown_pics/rank.png\" width=400/>\n",
+    "<img src=\"markdown_pics/rank.png\" width=\"400\"/>\n",
     "In other words, we reach the interpolation point (i.e. zero training error) once the width 'm' exceeds the training set size 'n'."
    ]
   },
@@ -485,7 +485,9 @@
    "cell_type": "code",
    "execution_count": 31,
    "id": "3c1bd5ed",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -517,7 +519,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb73524c",
+   "id": "c8437464",
    "metadata": {},
    "source": [
     "We find a very good agreement again between test and leave-one-out statistics across varying complexity settings. Moreover, the leave-one-out error exhibits the famous double-descent curve, as predicted by Theorem 4.3."
@@ -526,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f40e78a",
+   "id": "f58f437b",
    "metadata": {},
    "outputs": [],
    "source": []
