--- a/leave_one_out.ipynb
+++ b/leave_one_out.ipynb
@@ -13,7 +13,7 @@
    "id": "93e93996",
    "metadata": {},
    "source": [
-    "In this notebook we provide code for our paper \"Generalization Through The Lens of Leave-One-Out-Error\". We present the mathematical results along with the corresponding implementations. For a more precise introduction to the theoretical part however, please check out our paper."
+    "In this notebook we provide code for our paper \"Generalization Through The Lens of Leave-One-Out-Error\". We present the mathematical results along with the corresponding implementations. We tried to make the notation in this notebook self-contained, however some details might require more technical explanations. For a more precise introduction to the theoretical parts, please check out our [paper](https://openreview.net/pdf?id=7grkzyj89A_)."
    ]
   },
   {
@@ -31,10 +31,11 @@
    "source": [
     "You will need to install the following packages in order to run the code:\n",
     "<pre>\n",
-    "- numpy         1.21.5\n",
-    "- jax           0.2.26\n",
-    "- jaxlib        0.1.75\n",
-    "- torchvision   0.11.2\n",
+    "- numpy           1.21.5\n",
+    "- jax             0.2.26\n",
+    "- jaxlib          0.1.75\n",
+    "- torchvision     0.11.2\n",
+    "- neural_tangents 0.3.9\n",
     "</pre>"
    ]
   },
@@ -367,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73b0e3a6",
+   "id": "a11573f7",
    "metadata": {},
    "source": [
     "We see that the leave-one-out statistics match the test statistics almost exactly across different sample sizes. "
@@ -519,7 +520,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c43f8038",
+   "id": "65572d72",
    "metadata": {},
    "source": [
     "We find a very good agreement again between test and leave-one-out statistics across varying complexity settings. Moreover, the leave-one-out error exhibits the famous double-descent curve, as predicted by Theorem 4.3."
@@ -528,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62d34294",
+   "id": "fe23ce24",
    "metadata": {},
    "outputs": [],
    "source": []
